# metachain

./: .gitignore  CMakeLists.txt  README.md  update.sh
docs/: design.md
libs/: CMakeLists.txt
metacpp/: CMakeLists.txt
metacpp/client/: CMakeLists.txt  main.cpp
metacpp/include/network/: connection.h  define.h  message.h  p2p.h  settings.h
metacpp/libcore/: CMakeLists.txt  block.cpp  block.h
metacpp/libp2p/: CMakeLists.txt  message.h  p2p.cpp  p2p.h  session.h
metacpp/libs/: CMakeLists.txt  hello.cpp  message.cpp
metacpp/metacli/: main.cpp
metacpp/metad/: CMakeLists.txt  main.cpp
metacpp/src/: CMakeLists.txt  main.cpp  main.cpp.bak  message.cpp  p2p.cpp  settings.cpp
metacpp/tests/: CMakeLists.txt  test_main.cpp  test_threadpool.cpp
metacpp/utility/: CMakeLists.txt  asio.h  endpoint.h  noncopyable.h  thread.h  threadpool.cpp  threadpool.h
metago/: Readme.md
metaj/: pom.xml
metaj/src/main/java/info/chaintech/block/: App.java
metaj/src/main/java/info/chaintech/block/metaj/: App.java
metaj/src/main/java/info/chaintech/block/metaj/bitcoinj/: MainServer1.java  MainServer2.java  Readme.md
metaj/src/main/java/info/chaintech/block/metaj/core/: Block.java  Blockchain.java
metaj/src/main/java/info/chaintech/block/metaj/utils/: HashUtil.java
metaj/src/main/resources/: log4j2.xml
metaj/src/test/java/info/chaintech/block/: AppTest.java
metaj/src/test/java/info/chaintech/block/metaj/core/: BlockTest.java
metaj/src/test/java/info/chaintech/block/metaj/utils/: HashUtilTest.java
src/: CMakeLists.txt  main.cpp
